Bug #39678 Assertion (bdb) fails in IndexRootPage::indexMerge during recovery

Improved synchronization between concurrent DROP INDEX and INSERT/UPDATE operations
on the same table.