storage/falcon/SerialLog.cpp
@@ -51,6 +51,7 @@ static const char THIS_FILE[]=__FILE__;
 #endif
 
 static const int TRACE_PAGE = 0;
+static const int RECORD_MAX = 100000;
 
 extern uint falcon_gopher_threads;
 extern uint64 falcon_serial_log_file_size;
@@ -284,9 +285,9 @@ void SerialLog::recover()
 	SerialLogBlock *recoveryBlock = recoveryWindow->firstBlock();
 	recoveryBlockNumber = recoveryBlock->blockNumber;
 	SerialLogBlock *lastBlock = findLastBlock(recoveryWindow);
-	Log::log("first recovery block is " I64FORMAT "\n", 
+	Log::log("/nFirst recovery block is " I64FORMAT "\n", 
 			(otherWindow) ? otherWindow->firstBlock()->blockNumber : recoveryBlockNumber);
-	Log::log("last recovery block is " I64FORMAT "\n", lastBlock->blockNumber);
+	Log::log("Last recovery block is " I64FORMAT "\n", lastBlock->blockNumber);
 
 	if (otherWindow)
 		{
@@ -306,7 +307,7 @@ void SerialLog::recover()
 	if (readBlockNumber == 0)
 		readBlockNumber = lastBlock->blockNumber;
 		
-	Log::log("recovery read block is " I64FORMAT "\n", readBlockNumber);
+	Log::log("Recovery read block is " I64FORMAT "\n", readBlockNumber);
 	nextBlockNumber = lastBlock->blockNumber + 1;
 	lastWindow->deactivateWindow();
 	SerialLogWindow *window = findWindowGivenBlock(readBlockNumber);
@@ -328,11 +329,20 @@ void SerialLog::recover()
 	recoveryIndexes = new RecoveryObjects(this);
 	recoveryPhase = 1;	// Take Inventory (serialLogTransactions, recoveryObject states, last checkpoint)
 	
-	// Make a first pass finding records, transactions, etc.
+	Log::log("Recovery phase 1...\n");
+
+	unsigned long int recordCount = 0;
 
 	while ( (record = control.nextRecord()) )
+		{
+		if (++recordCount % RECORD_MAX == 0)
+			Log::log("Processed: %8ld\n", recordCount);
+			
 		record->pass1();
+		}
 
+	Log::log("Processed: %8ld\n", recordCount);
+	
 	//control.debug = false;
 	pass1 = false;
 	control.setWindow(window, block, 0);
@@ -344,9 +354,19 @@ void SerialLog::recover()
 
 	// Next, make a second pass to reallocate any necessary pages
 
+	Log::log("\nRecovery phase 2...\n");
+	recordCount = 0;
+	
 	while ( (record = control.nextRecord()) )
+		{
+		if (++recordCount % RECORD_MAX == 0)
+			Log::log("Processed: %8ld\n", recordCount);
+			
 		if (!isTableSpaceDropped(record->tableSpaceId) || record->type == srlDropTableSpace)
 			record->pass2();
+		}
+
+	Log::log("Processed: %8ld\n", recordCount);
 
 	recoveryPages->reset();
 	recoveryIndexes->reset();
@@ -363,10 +383,19 @@ void SerialLog::recover()
 
 	// Make a third pass doing things
 
+	Log::log("\nRecovery phase 3...\n");
+	recordCount = 0;
+	
 	while ( (record = control.nextRecord()) )
+		{
+		if (++recordCount % RECORD_MAX == 0)
+			Log::log("Processed: %8ld\n", recordCount);
+			
 		if (!isTableSpaceDropped(record->tableSpaceId))
 			record->redo();
-
+		}
+		
+	Log::log("Processed: %8ld\n", recordCount);
 
 	for (SerialLogTransaction *action, **ptr = &running.first; (action = *ptr);)
 		if (action->completedRecovery())
